{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 12,
  "lineage": "fc8572c8-6fd0-5ed8-c25e-060bea56735c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:loadbalancer/net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d",
            "arn_suffix": "net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d",
            "dns_name": "Kan-Sym-PRD-DMZ-WebApp-NLB-70fe243fb62ffa6d.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:loadbalancer/net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Kan-Sym-PRD-DMZ-WebApp-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7893a240ead65f7"
              },
              {
                "subnet_id": "subnet-0f14641bf3d02ce57"
              }
            ],
            "subnets": [
              "subnet-0a7893a240ead65f7",
              "subnet-0f14641bf3d02ce57"
            ],
            "vpc_id": "vpc-0b91f680b7588b87f",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_public_443",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:listener/net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d/0a7bd4ef55c70f74",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Kan-Sym-PRD-DMZ-WebApp-TCP443/f3ac5039a4e8f82a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:listener/net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d/0a7bd4ef55c70f74",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:loadbalancer/net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.app_public",
            "aws_lb_target_group.app_public_443"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_public_80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:listener/net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d/f658319506771000",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Kan-Sym-PRD-DMZ-WebApp-TCP80/cd5d696717f2fe6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:listener/net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d/f658319506771000",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:loadbalancer/net/Kan-Sym-PRD-DMZ-WebApp-NLB/70fe243fb62ffa6d",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.app_public",
            "aws_lb_target_group.app_public_80"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_public_443",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Kan-Sym-PRD-DMZ-WebApp-TCP443/f3ac5039a4e8f82a",
            "arn_suffix": "targetgroup/Kan-Sym-PRD-DMZ-WebApp-TCP443/f3ac5039a4e8f82a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Kan-Sym-PRD-DMZ-WebApp-TCP443/f3ac5039a4e8f82a",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-PRD-DMZ-WebApp-TCP443",
            "port": 443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "ip",
            "vpc_id": "vpc-0b91f680b7588b87f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_public_80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Kan-Sym-PRD-DMZ-WebApp-TCP80/cd5d696717f2fe6a",
            "arn_suffix": "targetgroup/Kan-Sym-PRD-DMZ-WebApp-TCP80/cd5d696717f2fe6a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Kan-Sym-PRD-DMZ-WebApp-TCP80/cd5d696717f2fe6a",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-PRD-DMZ-WebApp-TCP80",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "ip",
            "vpc_id": "vpc-0b91f680b7588b87f"
          }
        }
      ]
    }
  ]
}